# tabular-attention-benchmark

./: .gitignore  Makefile  README.md  REUSE.toml  pyproject.toml  run_benchmark.py  run_benchmark_plots.py
ablation/layout/: README.md  analyze_strides.py  microbench_contiguous.py  run_copy_benchmark.py
results/: copy_bandwidth.json
results/NVIDIA_H100_NVL/bfloat16/fa2/: CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-12_HD-128_col.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-12_HD-128_row.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-12_HD-64_col.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-12_HD-64_row.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-16_HD-128_col.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-16_HD-128_row.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-16_HD-64_col.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-16_HD-64_row.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-32_HD-64_col.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-32_HD-64_row.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-6_HD-32_col.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-6_HD-32_row.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-8_HD-128_col.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-8_HD-128_row.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-8_HD-16_col.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-8_HD-16_row.json  CA-1024_16-32-64-128-256-512-1024-2048__RA-64_32-64-128-256-512-1024-2048-4096-8192-16384__H-8_HD-64_col.json  (+1 more)
tabular_attn/: __init__.py  base.py  fa2.py  fa3.py  fa4.py
tests/: conftest.py  test_tabular_attn.py
(+80 files in other folders)
